# jpp

./: .gitignore  .gitmodules  CLAUDE.md  Cargo.toml  LICENSE  README.md  justfile  rust-toolchain.toml
.claude/commands/: dev-flow.md
.devcontainer/: devcontainer.json
.devcontainer/bun/: devcontainer-feature.json  install.sh
.devcontainer/claude-code/: devcontainer-feature.json  install.sh
.devcontainer/just/: devcontainer-feature.json  install.sh
.github/workflows/: ci.yml  deploy-web.yml  release.yml
crates/jpp_bench/: Cargo.toml
crates/jpp_bench/benches/: jsonpath.rs
crates/jpp_bench/data/: deep.json  medium.json  small.json
crates/jpp_bench/src/: lib.rs
crates/jpp_cli/: Cargo.toml
crates/jpp_cli/src/: main.rs
crates/jpp_core/: Cargo.toml
crates/jpp_core/src/: ast.rs  eval.rs  lexer.rs  lib.rs  parser.rs
crates/jpp_core/tests/: cts_test.rs
crates/jpp_wasm/: Cargo.toml
crates/jpp_wasm/src/: lib.rs
docs/: architecture.md  plan.md
web/: .gitignore  index.html  package.json  vite.config.ts
web/src/: App.tsx
web/src/components/: Header.tsx  JsonInput.tsx  QueryInput.tsx  ResultView.tsx
web/src/hooks/: useJpp.ts
web/src/styles/: app.css.ts  theme.ts
web/src/worker/: jpp.worker.ts
