[workspace]
members = ["crates/*"]
resolver = "3"

[workspace.package]
authors = ["1gy"]
edition = "2024"
version = "0.1.0"
publish = false

[workspace.dependencies]

[workspace.lints.clippy]
all = "deny"
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
