[package]
name = "jpp_bench"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
jpp_core = { path = "../jpp_core" }
serde_json = "1"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
serde_json_path = "0.7"

[[bench]]
name = "jsonpath"
harness = false

[lints.clippy]
unwrap_used = "allow"
